--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>g-flag</title>
+    <link rel="shortcut icon" href="icon.webp">
     <style>
         body {
             margin: 0;
