--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <title>g-flag</title>
     <link rel="shortcut icon" href="icon.webp">
     <style>
-        body {
+        
+        body,html {
             margin: 0;
             padding: 0;
-            background: url(./images/bgc.jfif) no-repeat;
-            background-size: cover;
+            width: 100%;
+            height: 100%;
+            /* background: url(./images/bgc.jfif) no-repeat; */
+            background:linear-gradient(-20deg,#dcb0ed 0%, #99c99c 100%);
+            overflow: hidden;
         }
 
         .box {
