--- a/blog 2/index.html
+++ b/blog 2/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>g-flag</title>
     <link rel="shortcut icon" href="icon.webp">
-    <link rel="stylesheet" href="./css/demo-2-1.css">
+    <link rel="stylesheet" href="./css/blog-2.css">
 </head>
 
 <body>
