--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <!-- 顶部标题 -->
                 <div class="title">
-                    <span>lovexhj - bash</span>
+                    <span>站点导航</span>
                 </div>
                 <!-- 终端内文字 -->
                 <div class="cmdText">
@@ -74,7 +74,7 @@
                 </div>
                 <!-- 顶部标题 -->
                 <div class="title">
-                    <span>lovexhj - bash</span>
+                    <span>个人介绍</span>
                 </div>
                 <!-- 终端内文字 -->
                 <div class="cmdText">
